# zk-state-machine

./: Cargo.toml
src/: basic.rs  lib.rs  testing.rs  trie_backend.rs  trie_backend_essence.rs
src/overlayed_changes/: mod.rs
