[package]
name = "sp-state-machine"
version = "0.35.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate State Machine"
edition = "2021"
license = "Apache-2.0"
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk.git"
documentation = "https://docs.rs/sp-state-machine"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
arbitrary = { features = ["derive"], optional = true, version = "1.3.2" }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
hash-db = { version = "0.16.0", default-features = false }
log = { version = "0.4.22", default-features = false }
parking_lot = { version = "0.12.1", optional = true, default-features = true }
rand = { optional = true, version = "0.8.5", default-features = true }
smallvec = { version = "1.11.0", default-features = true }
sp-core = { version = "35.0.0" }
sp-externalities = { version = "0.30.0" }
sp-panic-handler = { optional = true, version = "13.0.1", default-features = true }
thiserror = { optional = true, version = "1.0.64" }
tracing = { optional = true, version = "0.1.37", default-features = true }
trie-db = { version = "0.29.1", default-features = false }
sp-trie = { path = "../zk-trie" }

[patch.crates-io]
sp-trie = { path = "../zk-trie" }
sp-state-machine = { path = "." }

[dev-dependencies]
arbitrary = { features = ["derive"], version = "1.3.2" }
array-bytes = { version = "6.2.2", default-features = true }
assert_matches = { version = "1.5.0" }
pretty_assertions = { version = "1.3.0" }
rand = { version = "0.8.5", default-features = true }
sp-runtime = { version = "40.1.0", default-features = true }

[features]
default = ["std"]
fuzzing = ["arbitrary"]
std = [
    "codec/std",
    "hash-db/std",
    "log/std",
    "parking_lot",
    "rand",
    "sp-core/std",
    "sp-externalities/std",
    "sp-panic-handler",
    "sp-runtime/std",
    # "sp-trie/std",
    "thiserror",
    "tracing",
    "trie-db/std",
]
